<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/qr_example"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/five"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/begin_scan_instruction"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_marginTop="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_bill"
        android:id="@+id/scanBtn"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:layout_above="@+id/noCodeEt"
        android:layout_marginBottom="24dp"
        android:layout_alignLeft="@+id/noCodeEt"
        android:layout_alignStart="@+id/noCodeEt"
        android:layout_alignRight="@+id/noCodeEt"
        android:layout_alignEnd="@+id/noCodeEt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/separate_codes"
        android:id="@+id/textView2"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_code"
        android:id="@+id/noCodeEt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/begin_scan_title_container"
        >

    </FrameLayout>

</RelativeLayout>