<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Get Started"
        android:id="@+id/startBtn"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/bill_circle"
        android:layout_below="@+id/title_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/fifteen"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/phone_circle"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/ten" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:background="@drawable/money_circle"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_marginLeft="@dimen/ten" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/find_your_bill"
        android:id="@+id/tvFindBIll"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan_the_code"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/five"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/see_how_save"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/five"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Email address"
        android:id="@+id/et_email"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:textColor="@color/black"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc"
        android:id="@+id/cbTC"
        android:textColor="@color/white"
        android:layout_below="@+id/et_email"
        android:layout_alignLeft="@+id/cbMarketing"
        android:layout_alignStart="@+id/cbMarketing"
        android:layout_marginTop="@dimen/ten"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marketing"
        android:id="@+id/cbMarketing"
        android:textColor="@color/white"
        android:layout_below="@+id/cbTC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/five"/>

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        </FrameLayout>


</RelativeLayout>